# jrsonnet

./: Cargo.toml  README.adoc  flake.nix  result.adoc  treefmt.nix
bindings/jrsonnet-web/: .gitignore  Cargo.toml  deno.json  fmt.test.ts  fmt.ts  mod.test.ts  mod.ts
bindings/jrsonnet-web/scripts/: build_npm.ts
bindings/jrsonnet-web/src/: lib.rs
cmds/jrb/: Cargo.toml
cmds/jrb/src/: main.rs
cmds/jrsonnet-deps/: Cargo.toml
cmds/jrsonnet-deps/src/: main.rs
cmds/jrsonnet-fmt/: Cargo.toml
cmds/jrsonnet-fmt/src/: main.rs
crates/jrsonnet-cli/: Cargo.toml
crates/jrsonnet-cli/src/: lib.rs  manifest.rs  stdlib.rs  tla.rs
crates/jrsonnet-evaluator/: Cargo.toml
crates/jrsonnet-evaluator/src/: analyze.rs  async_import.rs  ctx.rs  dynamic.rs  error.rs  import.rs  lib.rs  manifest.rs  map.rs  stack.rs  tla.rs  val.rs
crates/jrsonnet-formatter/: Cargo.toml
crates/jrsonnet-formatter/src/: children.rs  comments.rs  lib.rs
crates/jrsonnet-interner/: Cargo.toml
crates/jrsonnet-interner/src/: inner.rs  lib.rs
crates/jrsonnet-ir/: Cargo.toml
crates/jrsonnet-ir-parser/: Cargo.toml
crates/jrsonnet-ir-parser/src/: lib.rs
crates/jrsonnet-ir/src/: expr.rs  function.rs  lib.rs  location.rs  source.rs  visit.rs
crates/jrsonnet-lexer/: Cargo.toml
crates/jrsonnet-lexer/src/: lex.rs  lib.rs  string.rs  string_block.rs
crates/jrsonnet-macros/: Cargo.toml
crates/jrsonnet-macros/src/: lib.rs  typed.rs
crates/jrsonnet-peg-parser/: Cargo.toml
crates/jrsonnet-peg-parser/src/: lib.rs
crates/jrsonnet-pkg/: Cargo.toml
crates/jrsonnet-pkg/src/: jsonnet_bundler.rs  lib.rs
crates/jrsonnet-rowan-parser/: Cargo.toml  jsonnet.ungram
crates/jrsonnet-types/: Cargo.toml
tests/: .gitignore  Cargo.toml
tests/benches/: cpp_test_suite.rs
tests/cpp_test_suite_golden_override/: error.01.jsonnet.golden  error.02.jsonnet.golden  error.03.jsonnet.golden  error.04.jsonnet.golden  error.05.jsonnet.golden  error.06.jsonnet.golden  error.07.jsonnet.golden  error.08.jsonnet.golden  error.args_commafodder.jsonnet.golden  error.array_large_index.jsonnet.golden  error.assert.fail1.jsonnet.golden  error.assert.fail2.jsonnet.golden  error.assert_equal_obj.jsonnet.golden  error.assert_equal_str.jsonnet.golden  error.computed_field_scope.jsonnet.golden  error.decodeUTF8_float.jsonnet.golden  error.decodeUTF8_nan.jsonnet.golden  error.field_not_exist.jsonnet.golden  error.flatMap_array_typecheck.jsonnet.golden  error.flatMap_seq_typecheck.jsonnet.golden  error.flatMap_string_typecheck.jsonnet.golden  error.function_duplicate_arg.jsonnet.golden  error.function_duplicate_param.jsonnet.golden  error.function_infinite_default.jsonnet.golden  error.function_no_default_arg.jsonnet.golden  error.function_too_many_args.jsonnet.golden  error.import_static-check-failure.jsonnet.golden  error.import_syntax-error.jsonnet.golden  error.inside_equals_array.jsonnet.golden  error.inside_equals_object.jsonnet.golden  error.inside_tostring_array.jsonnet.golden  error.inside_tostring_object.jsonnet.golden  error.invariant.avoid_output_change.jsonnet.golden  error.invariant.equality.jsonnet.golden  error.invariant.option.jsonnet.golden  error.invariant.simple.jsonnet.golden  error.invariant.simple2.jsonnet.golden  error.invariant.simple3.jsonnet.golden  error.manifest_toml_null_value.jsonnet.golden  error.manifest_toml_wrong_type.jsonnet.golden  (+45 more)
tests/cpp_test_suite_golden_override_ir_parser/: error.flatMap_array_typecheck.jsonnet.golden  error.flatMap_string_typecheck.jsonnet.golden  error.parse.text_block_indent_spaces.jsonnet.golden  error.static_error_var_not_exist.jsonnet.golden  error.std_parseYaml1.jsonnet.golden
tests/go_testdata_golden_override/: arrcomp5.jsonnet.golden  arrcomp_if4.jsonnet.golden  arrcomp_if6.jsonnet.golden  arrcomp_if7.jsonnet.golden  assert3.jsonnet.golden  assert_equal4.jsonnet.golden  assert_equal5.jsonnet.golden  assert_equal6.jsonnet.golden  assert_failed.jsonnet.golden  assert_failed_custom.jsonnet.golden  bad_function_call.jsonnet.golden  bad_function_call2.jsonnet.golden  bad_function_call_and_error.jsonnet.golden  bad_index_array.jsonnet.golden  bad_index_string.jsonnet.golden  bitwise_and3.jsonnet.golden  bitwise_and4.jsonnet.golden  bitwise_xor7.jsonnet.golden  builtinBase64DecodeBytes_high_codepoint.jsonnet.golden  builtinBase64DecodeBytes_invalid_base64_data.jsonnet.golden  builtinBase64DecodeBytes_wrong_type.jsonnet.golden  builtinBase64Decode_high_codepoint.jsonnet.golden  builtinBase64Decode_invalid_base64_data.jsonnet.golden  builtinBase64Decode_wrong_type.jsonnet.golden  builtinBase64_invalid_byte_array.jsonnet.golden  builtinBase64_invalid_byte_array1.jsonnet.golden  builtinBase64_invalid_byte_array2.jsonnet.golden  builtinBase64_non_string_non_array.jsonnet.golden  builtinChar3.jsonnet.golden  builtinChar5.jsonnet.golden  builtinChar7.jsonnet.golden  builtinIsEmpty2.jsonnet.golden  builtinManifestJsonEx_cyclic.jsonnet.golden  builtinObjectFieldsEx_bad.jsonnet.golden  builtinObjectFieldsEx_bad2.jsonnet.golden  builtinObjectHasExBadBoolean.jsonnet.golden  builtinObjectHasExBadField.jsonnet.golden  builtinObjectHasExBadObject.jsonnet.golden  builtinObjectRemoveKey_super_assert.jsonnet.golden  builtinReverse_not_array.jsonnet.golden  (+128 more)
tests/go_testdata_golden_override_ir_parser/: builtinManifestJsonEx_cyclic.jsonnet.golden  builtin_manifestTomlEx_cyclic.jsonnet.golden
tests/golden/: comp_if_with_multiple_captures.jsonnet  object_assert_after_member_local.jsonnet
tests/golden_destruct/: mutual_recursive_cross.jsonnet  mutual_recursive_fields.jsonnet  mutual_recursive_locals.jsonnet  omit.jsonnet  params.jsonnet
tests/realworld/: entry-gitlab-runbooks.jsonnet  entry-graalvm.jsonnet  entry-kube-prometheus.jsonnet  entry-loki.jsonnet  entry-mimir.jsonnet  entry-tempo.jsonnet  jsonnetfile.json  jsonnetfile.lock.json
tests/suite/: comp_eager_array_body_capture.jsonnet  comp_if_with_multiple_captures.jsonnet  object_assert_after_member_local.jsonnet  std_param_names.jsonnet
tests/tests/: builtin.rs  common.rs  cpp_test_suite.rs  golden.rs  std_native.rs
(+191 files in other folders)
