[package]
name = "jrsonnet-web"
description = "WebAssembly JavaScript bindings for jrsonnet"
keywords = ["jsonnet", "wasm", "web"]
categories = ["wasm"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
experimental = ["exp-preserve-order", "exp-bigint"]
exp-preserve-order = [
  "jrsonnet-evaluator/exp-preserve-order",
  "jrsonnet-stdlib/exp-preserve-order",
]
exp-bigint = [
  "dep:num-bigint",
  "jrsonnet-evaluator/exp-bigint",
  "jrsonnet-stdlib/exp-bigint",
  "jrsonnet-types/exp-bigint",
]

[dependencies]
console_error_panic_hook.workspace = true
getrandom = { workspace = true, features = ["wasm_js"] }
hi-doc.workspace = true
jrsonnet-evaluator.workspace = true
jrsonnet-formatter.workspace = true
jrsonnet-gcmodule.workspace = true
jrsonnet-stdlib.workspace = true
jrsonnet-types.workspace = true
js-sys.workspace = true
num-bigint = { workspace = true, optional = true }
rustc-hash.workspace = true
url.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[lints]
workspace = true

[lib]
name = "jsonnet_web"
crate-type = ["cdylib"]
