[package]
name = "jrb"
description = "jsonnet package manager"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
jrsonnet-pkg.workspace = true

clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
