[package]
name = "jrb"
description = "jsonnet package manager"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
jrsonnet-pkg.workspace = true

clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# jrsonnet-pkg wants a rustls provider.
# ring is not ideal and not recommended by rustls authors... But is easiest to build,
# and there should be little risk for bundling use case
rustls = { workspace = true, features = ["ring"] }
