[package]
name = "jrsonnet-cli"
description = "Reusable clap-based building blocks for jrsonnet command-line tools"
keywords = ["jsonnet", "cli", "clap"]
categories = ["command-line-interface"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
experimental = [
  "exp-preserve-order",
  "exp-bigint",
  "exp-null-coaelse",
  "exp-regex",
]
exp-preserve-order = [
  "jrsonnet-evaluator/exp-preserve-order",
  "jrsonnet-stdlib/exp-preserve-order",
]
exp-bigint = ["jrsonnet-evaluator/exp-bigint", "jrsonnet-stdlib/exp-bigint"]
exp-null-coaelse = [
  "jrsonnet-evaluator/exp-null-coaelse",
  "jrsonnet-stdlib/exp-null-coaelse",
]
exp-regex = ["jrsonnet-stdlib/exp-regex"]

[dependencies]
jrsonnet-evaluator = { workspace = true, features = ["explaining-traces"] }
jrsonnet-ir.workspace = true
jrsonnet-stdlib.workspace = true
jrsonnet-gcmodule.workspace = true

clap = { workspace = true, features = ["derive"] }
