[package]
name = "jrsonnet-evaluator"
description = "Rust implementation of the jsonnet language interpreter"
keywords = ["jsonnet", "interpreter", "config"]
categories = ["compilers", "template-engine", "config"]
readme = "README.adoc"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

build = "build.rs"

[lints]
workspace = true

[features]
default = ["explaining-traces", "ir-parser", "wasm-bindgen"]
# Rustc-like trace visualization
explaining-traces = ["hi-doc"]
# Allows library authors to throw custom errors
anyhow-error = ["anyhow"]
# Use hand-written recursive descent parser
ir-parser = ["dep:jrsonnet-ir-parser"]
# Use PEG parser
peg-parser = ["dep:jrsonnet-peg-parser"]

experimental = [
  "exp-preserve-order",
  "exp-destruct",
  "exp-object-iteration",
  "exp-bigint",
  "exp-null-coaelse",
]
# Allows to preserve field order in objects
exp-preserve-order = []
# Implements field destructuring
exp-destruct = [
  "jrsonnet-peg-parser?/exp-destruct",
  "jrsonnet-ir-parser?/exp-destruct",
]
# Iteration over objects using [key]: value syntax
exp-object-iteration = [
  "jrsonnet-ir/exp-object-iteration",
  "jrsonnet-peg-parser?/exp-object-iteration",
  "jrsonnet-ir-parser?/exp-object-iteration",
]
# Bigint type
exp-bigint = ["num-bigint", "jrsonnet-types/exp-bigint"]
# obj?.field, obj?.['field']
exp-null-coaelse = [
  "jrsonnet-peg-parser?/exp-null-coaelse",
  "jrsonnet-ir-parser?/exp-null-coaelse",
]
wasm-bindgen = ["dep:wasm-bindgen"]

[dependencies]
jrsonnet-interner.workspace = true
jrsonnet-ir.workspace = true
jrsonnet-peg-parser = { workspace = true, optional = true }
jrsonnet-ir-parser = { workspace = true, optional = true }
jrsonnet-types.workspace = true
jrsonnet-macros.workspace = true
jrsonnet-gcmodule.workspace = true

pathdiff.workspace = true
static_assertions.workspace = true

rustc-hash.workspace = true

thiserror.workspace = true
# Friendly errors
strsim.workspace = true

serde.workspace = true

anyhow = { workspace = true, optional = true }
# Better explaining traces
hi-doc = { workspace = true, optional = true }
# Bigint
num-bigint = { workspace = true, features = ["serde"], optional = true }

stacker.workspace = true
educe = { workspace = true, features = [
  "Clone",
  "Debug",
  "Eq",
  "Hash",
  "PartialEq",
] }
smallvec.workspace = true
drop_bomb.workspace = true
wasm-bindgen = { workspace = true, optional = true }

[build-dependencies]
rustversion.workspace = true

[dev-dependencies]
insta.workspace = true
strip-ansi-escapes.workspace = true
