[package]
name = "jrsonnet-formatter"
description = "Jsonnet source code formatter library"
keywords = ["jsonnet", "formatter"]
categories = ["development-tools"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
dprint-core.workspace = true
hi-doc.workspace = true
indoc.workspace = true
insta.workspace = true
jrsonnet-lexer.workspace = true
jrsonnet-rowan-parser.workspace = true

[lints]
workspace = true
