[package]
name = "jrsonnet-ir-parser"
description = "Hand-rolled recursive-descent parser that produces jrsonnet IR directly"
keywords = ["jsonnet", "parser"]
categories = ["parser-implementations"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
exp-null-coaelse = ["jrsonnet-ir/exp-null-coaelse"]
exp-destruct = ["jrsonnet-ir/exp-destruct"]

[dependencies]
insta.workspace = true
jrsonnet-gcmodule.workspace = true
jrsonnet-ir.workspace = true
jrsonnet-lexer.workspace = true

[lints]
workspace = true
