[package]
name = "jrsonnet-ir"
description = "Intermediate representation for the jsonnet language used by jrsonnet"
keywords = ["jsonnet", "ir", "ast"]
categories = ["compilers"]
readme = "README.adoc"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
exp-destruct = []
exp-null-coaelse = []

[dependencies]
jrsonnet-interner.workspace = true
jrsonnet-gcmodule.workspace = true

static_assertions.workspace = true

peg.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
insta.workspace = true
