[package]
name = "jrsonnet-lexer"
description = "Jrsonnet lexer shared between rowan and hand-rolled parser"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
logos.workspace = true

[lints]
workspace = true
