[package]
name = "jrsonnet-lexer"
description = "Jsonnet lexer shared between the rowan-based and hand-rolled jrsonnet parsers"
keywords = ["jsonnet", "lexer"]
categories = ["parser-implementations"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
logos.workspace = true

[lints]
workspace = true
