[package]
name = "jrsonnet-peg-parser"
description = "Legacy PEG-based parser producing jrsonnet IR"
keywords = ["jsonnet", "parser", "peg"]
categories = ["parser-implementations"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jrsonnet-gcmodule.workspace = true
jrsonnet-ir.workspace = true
peg.workspace = true

[lints]
workspace = true

[dev-dependencies]
insta.workspace = true

[features]
default = []
experimental = ["exp-destruct", "exp-null-coaelse", "exp-object-iteration"]
exp-destruct = ["jrsonnet-ir/exp-destruct"]
exp-null-coaelse = ["jrsonnet-ir/exp-null-coaelse"]
exp-object-iteration = ["jrsonnet-ir/exp-object-iteration"]
