[package]
name = "jrsonnet-pkg"
description = "jsonnet-bundler jsonnetfile parser and installer"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Source url parser
peg.workspace = true

# Gix for git repos, reqwest + zip for github
gix = { workspace = true, features = ["blocking-http-transport-reqwest"] }
reqwest = { workspace = true, features = ["rustls-no-provider"] }
zip.workspace = true
url.workspace = true
camino.workspace = true

# ring is not ideal and not recommended by rustls authors... But is easiest to build,
# and there should be little risk for bundling use case
rustls = { workspace = true, features = ["ring"] }

# Global cache dir
directories.workspace = true
